# DGM-LANGUAGE-PROGRAMME-VISUAL-CODE-EXTENSIONS

./: .gitignore  CHANGES.md  DELIVERABLES.md  LANGUAGE_SPEC.md  PUBLISHING.md  README.md  README.template.md  STABILIZATION.md  STDLIB_SPEC.md  WORKFLOW.md
.github/workflows/: ci.yml
dgm/: Cargo.toml  README.md  README.template.md
dgm/src/: analyzer.rs  ast.rs  environment.rs  error.rs  formatter.rs  interpreter.rs  lexer.rs  lib.rs  lsp.rs  main.rs  parser.rs  token.rs
dgm/src/stdlib/: crypto_mod.rs  fs_mod.rs  http_mod.rs  io_mod.rs  json_mod.rs  math.rs  mod.rs  net_mod.rs  os_mod.rs  regex_mod.rs  security.rs  tests.rs  thread_mod.rs  time_mod.rs  xml_mod.rs
dgm/tests/: conformance.rs  doc_examples.rs  golden.rs
dgm/tests/common/: mod.rs
docs/: manifest.json
scripts/: build_docs.js
tests/: README.md
tests/examples/control_flow/: expected.json  input.dgm
tests/examples/hello_world/: expected.json  input.dgm
tests/examples/xml_query/: expected.json  input.dgm
tests/golden/control_flow/: expected.json  input.dgm
tests/golden/error_throw_catch/: expected.json  input.dgm
tests/golden/module_cross_module_closure/: expected.json  helpers.dgm  input.dgm
tests/golden/oop_inheritance_closure/: expected.json  input.dgm
tests/golden/runtime_error_format/: input.dgm
tests/golden/syntax_core/: expected.json  input.dgm
vscode-dgm/: .vscodeignore  CHANGELOG.md  README.md  STRUCTURE.md  extension.js  language-configuration.json  package-lock.json  package.json
vscode-dgm/snippets/: dgm.json
vscode-dgm/syntaxes/: dgm.tmLanguage.json
(+49 files in other folders)
