[package]
name = "dgm"
version = "0.2.0"
edition = "2021"
description = "DGM Programming Language — a complete interpreted language"

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
itoa = "1"
ryu = "1"
ureq = "2"
tiny_http = "0.12"
regex = "1"
sha2 = "0.10"
md-5 = "0.10"
base64 = "0.22"
chrono = "0.4"
rand = "0.8"
rustyline = "14"
quick-xml = "0.36"
